@@ -1,5 +1,11 @@
 2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
 
+	* pycvsanaly2/extensions/Metrics.py:
+
+	Use the composed revision to identify a single action in cvs.
+	
+2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
+
 	* pycvsanaly2/CVSParser.py:
 
 	Remove 'Attic' also from the composed revision in cvs.
